--- a/css/_dialog.scss
+++ b/css/_dialog.scss
@@ -11,7 +11,7 @@
     display: none;
     &.on {
         display: flex;
-        animation: dialogBox .5s forwards;
+        animation: dialogBox 0.5s forwards;
     }
     & > .close {
         width: 100%;
@@ -19,24 +19,23 @@
         background-color: rgba(0, 0, 0, 0.8);
         position: absolute;
         @include pos(tblr, 0);
-      
     }
     @at-root .dialog_cnt_01 {
         width: 100%;
         max-width: 779px;
+        max-height: 95%;
         margin: auto;
-        padding: 34px 20px;
+        padding: 30px 20px;
         position: relative;
         z-index: 2;
         background: linear-gradient(0deg, #091422, #0e263c);
         box-shadow: 5px 5px 10px #000;
         border: 1px solid transparent;
         border-image: linear-gradient(0deg, #f6bf3d, #7a5d17, #f6bf3d) 1 1 round;
-
-        display: none;
-        &.on {
-            display: block;
+        @include rwd(600) {
+            padding: 50px 10px 30px;
         }
+
         .close {
             width: 38px;
             height: 38px;
@@ -44,6 +43,9 @@
             position: absolute;
             @include pos(tr, 15px);
             cursor: pointer;
+            @include rwd(600) {
+                @include pos(tr, 5px);
+            }
             &::before,
             &::after {
                 content: "";
@@ -72,7 +74,7 @@
             }
         }
         .title {
-            padding-bottom: 21px;
+            padding: 0 25px 20px;
             margin-bottom: 47px;
             color: #e9b21a;
             font-size: 2.1rem;
@@ -80,6 +82,13 @@
             letter-spacing: 5px;
             text-align: center;
             position: relative;
+
+            @include rwd(600) {
+                padding: 0 25px 10px;
+                margin-bottom: 25px;
+                font-size: 1.6em;
+            }
+
             &::before {
                 content: "";
                 width: 100%;
@@ -94,15 +103,27 @@
         .innerBox {
             width: 100%;
             max-width: 485px;
+            max-height: calc(100vh - 200px);
+            overflow-y: auto;
             margin: auto;
+            &::-webkit-scrollbar {
+                width: 0;
+            }
+
             & > div {
                 height: 35px;
                 display: flex;
                 align-items: center;
                 justify-content: flex-end;
-                margin-bottom: 31px;
+                margin-bottom: 30px;
+
+                @include rwd(600) {
+                    height: auto;
+                    flex-direction: column;
+                    align-items: flex-start;
+                }
             }
-            span{
+            span {
                 width: 120px;
                 padding-right: 5px;
                 flex-shrink: 0;
@@ -111,6 +132,12 @@
                 color: #869bae;
                 margin-right: 6px;
                 position: relative;
+
+                @include rwd(600) {
+                    width: 100%;
+                    padding-bottom: 5px;
+                    text-align: left;
+                }
             }
             .iptBox {
                 width: 100%;
@@ -121,6 +148,11 @@
                 box-shadow: 0 0 6px #000 inset, 0 1px 1px #313a5c;
                 display: flex;
                 align-items: center;
+
+                @include rwd(800) {
+                    max-width: 100%;
+                }
+
                 input {
                     width: 100%;
                     height: 100%;
@@ -128,13 +160,17 @@
                     padding: 0 20px;
                     color: #d5d5d5;
                     font-size: 1rem;
+                    @include rwd(800) {
+                        height: 35px;
+                    }
                 }
                 .selectBox {
                     height: 100%;
-                    padding: 0 15px;     
+                    padding: 0 15px;
                     flex-shrink: 0;
                     align-items: center;
                     position: relative;
+
                     &::before {
                         content: "";
                         width: 1px;
@@ -157,6 +193,10 @@
                         -webkit-appearance: none;
                         background: url("../images/icon/arrow-bottom.png") no-repeat right center transparent;
                         cursor: pointer;
+
+                        @include rwd(800) {
+                            height: 35px;
+                        }
                     }
                     option {
                         height: 32px;
@@ -177,6 +217,7 @@
             font-size: 1rem;
             letter-spacing: 1px;
             display: flex;
+            flex-direction: row !important;
             align-items: center;
             a {
                 color: #00a0e9;
@@ -200,12 +241,17 @@
                 background: url(../images/icon/icon-tick.png) no-repeat center / 90%;
             }
         }
+        .codeIpt {
+            width: 100%;
+            height: 35px;
+            display: flex;
+        }
     }
     // 忘記密碼
     .forget {
         .btn {
             max-width: 150px;
-            margin: 50px auto;
+            margin: 50px auto 0;
         }
     }
     // 註冊會員
@@ -213,12 +259,16 @@
         .regd_btn {
             display: flex;
             .btn {
+                width: 100%;
                 flex: 1;
                 height: 45px;
                 line-height: 45px;
             }
             .btn + .btn {
                 margin-left: 15px;
+                @include rwd(600) {
+                    margin-left: 0;
+                }
             }
         }
         div.btn {
@@ -241,24 +291,87 @@
         position: relative;
         margin: auto;
         background-color: #c43f40;
-        border-radius: 10px;
         box-shadow: 0 0 30px #cea7a2 inset;
         border: 2px solid #cd6e3e;
         border-radius: 175px 10px 10px 175px;
         z-index: 2;
-        display: none;
-        &.on {
-            display: flex;
+        display: flex;
+        @include rwd(710) {
+            width: 100%;
+            max-width: 370px;
+            max-height: calc(100vh - 10px);
+            flex-direction: column;
+            border-radius: 175px 175px 10px 10px;
+            padding-top: 5px;
         }
+
+        .close {
+            width: 38px;
+            height: 38px;
+            z-index: 1;
+            position: absolute;
+            @include pos(tr, 10px);
+            cursor: pointer;
+
+            @include rwd(710) {
+                @include pos(tr, 5px);
+                border: 2px solid #fff;
+                background-color: #000;
+                border-radius: 50%;
+
+                @include hover {
+                    &:hover {
+                        border: 2px solid #F8A959;
+                    }
+                }
+            }
+
+            &::before,
+            &::after {
+                content: "";
+                width: 100%;
+                height: 1px;
+                margin: auto;
+                position: absolute;
+                @include pos(tblr, 0);
+                background-color: #fff;
+                @include rwd(710) {
+                    width: calc(100% - 10px);
+                    height: 2px;
+                    border-radius: 2px;
+                }
+            }
+            &::before {
+                transform: rotate(45deg);
+            }
+            &::after {
+                transform: rotate(-45deg);
+            }
+            &:active::before,
+            &:active::after {
+                background-color: #F8A959;
+            }
+            @include hover {
+                &:hover::before,
+                &:hover::after {
+                    background-color: #F8A959;
+                }
+            }
+        }
+
         .roulette {
-            width: 350px;
-            height: 350px;
+            width: 89vw;
+            max-width: 350px;
+            height: 89vw;
+            max-height: 350px;
+            margin: auto;
             position: relative;
             left: 0;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-shrink: 0;
+
             &::before {
                 content: "";
                 width: 100%;
@@ -298,53 +411,33 @@
         }
         .newGift_cnt {
             width: 100%;
-            height: 350px;
+            max-height: 350px;
             padding: 30px 20px;
             color: $color_02;
             flex-direction: column;
             justify-content: space-between;
             position: relative;
             display: flex;
-            .close {
-                width: 38px;
-                height: 38px;
-                z-index: 1;
-                position: absolute;
-                @include pos(tr, 10px);
-                cursor: pointer;
-                &::before,
-                &::after {
-                    content: "";
-                    width: 100%;
-                    height: 1px;
-                    margin: auto;
-                    position: absolute;
-                    @include pos(tblr, 0);
-                    background-color: #fff;
-                }
-                &::before {
-                    transform: rotate(45deg);
-                }
-                &::after {
-                    transform: rotate(-45deg);
-                }
-                &:active::before,
-                &:active::after {
-                    background-color: #ffd200;
-                }
-                @include hover {
-                    &:hover::before,
-                    &:hover::after {
-                        background-color: #ffd200;
-                    }
-                }
+            &::-webkit-scrollbar {
+                width: 0;
+            }
+            @include rwd(710) {
+                height: calc(100% - 89vw);
+                overflow-y: scroll;
+                margin-top: 20px;
             }
             .title {
                 margin-bottom: 20px;
                 span {
+                    display: block;
+                    padding-bottom: 5px;
                     font-size: 1.8rem;
                     letter-spacing: 1px;
                     font-weight: bold;
+
+                    @include rwd(710) {
+                        font-size: 1.4rem;
+                    }
                 }
                 p {
                     font-size: 0.8rem;
@@ -387,54 +480,51 @@
         margin: auto;
         z-index: 2;
         position: relative;
-        display: none;
-        &.on{
-            display: block;
-        }
-        .close{
+
+        .close {
             width: 40px;
             height: 40px;
             background-color: #000;
             border-radius: 50%;
             position: absolute;
-            @include pos(tr,-20px);
+            @include pos(tr, -20px);
             cursor: pointer;
             border: 1px solid #c43f40;
             z-index: 2;
             &::after,
-            &::before{
-                content: '';
+            &::before {
+                content: "";
                 width: 25px;
                 height: 4px;
                 margin: auto;
                 border-radius: 4px;
                 background-color: #fff;
                 position: absolute;
-                @include pos(tblr,0);
+                @include pos(tblr, 0);
             }
-            &::after{
+            &::after {
                 transform: rotate(45deg);
             }
-            &::before{
+            &::before {
                 transform: rotate(-45deg);
             }
         }
-        .todayGame_actor{
+        .todayGame_actor {
             width: 75%;
             margin: auto;
             position: absolute;
-            @include pos(bl,-10%,-40%);
-            z-index: 1;  
+            @include pos(bl, -10%, -40%);
+            z-index: 1;
         }
-        .firework{
+        .firework {
             width: 100%;
             position: absolute;
             top: 0;
             left: 0;
-            transform-origin: 55% 60% ; 
+            transform-origin: 55% 60%;
             animation: firework 1s cubic-bezier(0, 0, 0, 1.13) infinite;
         }
-        .todayGame_cnt{
+        .todayGame_cnt {
             width: 350px;
             padding: 90px 0 20px;
             background-color: #c43f40;
@@ -445,30 +535,30 @@
             flex-direction: column;
             align-items: center;
             position: relative;
-            &::before{
-                content: '';
+            &::before {
+                content: "";
                 width: 115%;
                 padding-bottom: 24%;
-                background: url(../images//todayGame/todayGame_title.png)no-repeat center/ cover;
+                background: url(../images//todayGame/todayGame_title.png) no-repeat center/ cover;
                 position: absolute;
                 top: -15px;
                 left: -7.7%;
             }
-            &::after{
-                content: '';
+            &::after {
+                content: "";
                 width: 10%;
                 padding-bottom: 20%;
-                background: url(../images//todayGame/todayGame_ribbon.png)no-repeat center/ cover;
+                background: url(../images//todayGame/todayGame_ribbon.png) no-repeat center/ cover;
                 position: absolute;
                 top: 50px;
                 right: -4.5%;
             }
-            .todayGame_msg{
+            .todayGame_msg {
                 width: 80%;
                 margin-bottom: 20px;
                 padding: 10px 0;
                 text-align: center;
-                background: #960F0D;
+                background: #960f0d;
                 box-shadow: 0 0 10px #d64d4b inset;
                 color: #fff;
                 font-weight: bold;
@@ -477,12 +567,12 @@
                 border-radius: 5px;
                 line-height: 50px;
             }
-            .btn{
+            .btn {
                 width: 60%;
                 cursor: pointer;
-                transition: .3s;
+                transition: 0.3s;
                 transform: scale(0.95);
-                &:active{
+                &:active {
                     transform: scale(1) translateY(2px);
                 }
             }
@@ -500,18 +590,22 @@
     }
 }
 
-@keyframes firework{
-    0%{
+@keyframes firework {
+    0% {
         transform: scale(1);
         opacity: 0;
     }
-    100%{
+    100% {
         transform: scale(2);
         opacity: 1;
     }
 }
 
-@keyframes dialogBox{
-    0%{opacity: 0;}
-    100%{opacity: 1;}
+@keyframes dialogBox {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
