--- a/css/_dialog.scss
+++ b/css/_dialog.scss
@@ -315,13 +315,13 @@
 
             @include rwd(710) {
                 @include pos(tr, 5px);
-                border: 2px solid #fff;
+                border: 1px solid #c43f40;
                 background-color: #000;
                 border-radius: 50%;
 
                 @include hover {
                     &:hover {
-                        border: 2px solid #F8A959;
+                        border: 1px solid #F8A959;
                     }
                 }
             }
@@ -424,7 +424,7 @@
             @include rwd(710) {
                 height: calc(100% - 89vw);
                 overflow-y: scroll;
-                margin-top: 20px;
+                padding: 5vw 20px 20px;
             }
             .title {
                 margin-bottom: 20px;
@@ -515,6 +515,10 @@
             position: absolute;
             @include pos(bl, -10%, -40%);
             z-index: 1;
+
+            @include rwd(500){
+                display: none;
+            }
         }
         .firework {
             width: 100%;
@@ -525,7 +529,8 @@
             animation: firework 1s cubic-bezier(0, 0, 0, 1.13) infinite;
         }
         .todayGame_cnt {
-            width: 350px;
+            width: 82vw;
+            max-width: 350px;
             padding: 90px 0 20px;
             background-color: #c43f40;
             border-radius: 10px;
@@ -535,6 +540,11 @@
             flex-direction: column;
             align-items: center;
             position: relative;
+
+            @include rwd(500){
+               padding: 20vw 0 20px;
+            }
+
             &::before {
                 content: "";
                 width: 115%;
@@ -566,6 +576,16 @@
                 letter-spacing: 1px;
                 border-radius: 5px;
                 line-height: 50px;
+
+                @include rwd(500){
+                    width: 90%;
+                }
+
+                @include rwd(370){
+                    width: 90%;
+                    font-size: 1.6rem;
+                    line-height: 35px;
+                }         
             }
             .btn {
                 width: 60%;
