--- a/css/_main.scss
+++ b/css/_main.scss
@@ -773,6 +773,7 @@ body {
             font-size: 1.2rem;
             font-weight: 300;
             cursor: pointer;
+            z-index: 99999;
             img {
                 width: 20px;
                 height: 20px;
