--- a/css/all.css
+++ b/css/all.css
@@ -2437,7 +2437,7 @@ body {
 
 .mainCnt .contBox-full > .contBox-min > .flexEvent {
   padding: 0 20px;
-  margin-bottom: 10px;
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 1280px) {
